Added O Auth and other details
