# docs/swagger.json
@@ -2,10 +2,10 @@
   "swagger": "2.0",
   "info": {
     "version": "2.0.0",
-    "title": "CloudAgent Apis",
+    "title": "Voosh Project Apis",
     "description": "API for Managing User Details",
     "contact": {
-      "name": "API Support",
+      "name": "Vihang Subhash Hiwase",
       "email": "vihangsubhash123@gmail.com"
     }
   },
@@ -13,12 +13,12 @@
   "basePath": "/",
   "tags": [
     {
-      "name": "User CRUD",
-      "description": "User related apis"
+      "name": "Authentication",
+      "description": "Endpoints for User authentication"
     },
     {
-      "name": "Health",
-      "description": "Health Check"
+      "name": "User",
+      "description": "Endpoints for User CRUD"
     }
   ],
   "schemes": [
@@ -32,6 +32,28 @@
     "application/json"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+      "tags": ["Authentication"]
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "tags": ["Authentication"]
+      }
+    },
     "/auth/register": {
       "post": {
         "description": "",
@@ -53,6 +75,9 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK"
+          },
           "201": {
             "description": "Created"
           },
@@ -63,6 +88,8 @@
             "description": "Internal Server Error"
           }
         }
+        ,
+      "tags": ["Authentication"]
       }
     },
     "/auth/signout": {
@@ -92,16 +119,8 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/auth/registerOauth": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        ,
+      "tags": ["Authentication"]
       }
     },
     "/auth/googleCallBack": {
@@ -110,8 +129,61 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
+        ,
+      "tags": ["Authentication"]
+      }
+    },
+    "/auth/googleFailure": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+        ,
+      "tags": ["Authentication"]
+      }
+    },
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+        ,
+      "tags": ["Authentication"]
+      }
+    },
+    "/auth/googleLogout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+        ,
+      "tags": ["Authentication"]
       }
     },
     "/user/fetchUsers": {
@@ -140,12 +212,19 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },"tags": ["User"]
       }
     },
     "/user/fetchMyProfile": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -163,6 +242,7 @@
             "description": "Internal Server Error"
           }
         }
+        ,"tags": ["User"]
       }
     },
     "/user/editmyProfile": {
@@ -216,6 +296,7 @@
             "description": "Internal Server Error"
           }
         }
+        ,"tags": ["User"]
       }
     },
     "/user/uploadUserImage": {
@@ -248,6 +329,7 @@
             "description": "Internal Server Error"
           }
         }
+        ,"tags": ["User"]
       }
     },
     "/user/editRole": {
@@ -286,7 +368,8 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "tags": ["User"]
       }
     }
   },
