# routes/authRoutes.js
@@ -5,7 +5,9 @@ const authMiddleware = require('../middleware/authMiddleware');
 
 router.post('/register', authController.register);
 router.post('/signout', authMiddleware.authenticateToken,  authController.signout);
-router.get('/registerOauth', authController.registerOauth);
-router.get('/googleCallBack', authController.googleCallBack);
+router.get('/googleCallBack',authMiddleware.isLoggedIn, authController.googleCallBack);
+router.get('/googleFailure', authController.googleFailure);
+router.get('/google', authController.google);
+router.get('/googleLogout', authMiddleware.isLoggedIn, authController.googleLogout);
 
 module.exports = router;
